@@ -23,7 +23,7 @@ dnl this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 dnl Place - Suite 330, Boston, MA  02111-1307, USA
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT(rezound, 0.8.2beta, [http://sourceforge.net/tracker/?group_id=5056&atid=105056])
+AC_INIT(rezound, 0.8.3beta, [http://sourceforge.net/tracker/?group_id=5056&atid=105056])
 AC_CONFIG_AUX_DIR(config)
 dnl ??? AC_CONFIG_SRCDIR([config/config.h])
 AM_CONFIG_HEADER([config/config.h])
